<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/splashBg"
        android:scaleType="fitStart"
        android:src="@drawable/splash_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="38dp">
      <TextView
          android:gravity="center"
          android:id="@+id/splashwelcome"
          android:layout_marginBottom="75dp"
          android:layout_alignParentBottom="true"
          android:text="@string/splash_welcome_txt"
          style="@style/LabelStyle"/>
        <TextView
            android:id="@+id/namadev"
            android:layout_marginBottom="250dp"
            android:layout_alignParentBottom="true"
            android:text="@string/nama_dev"
            style="@style/LabelStyle"/>
        <TextView
            android:id="@+id/nimmahasiswa"
            android:layout_marginBottom="230dp"
            android:layout_alignParentBottom="true"
            android:text="@string/nim_mahasiswa"
            style="@style/LabelStyle"/>
        <TextView
            android:id="@+id/jurusan"
            android:layout_marginBottom="210dp"
            android:layout_alignParentBottom="true"
            android:text="@string/jurusan"
            style="@style/LabelStyle"/>
        <TextView
            android:id="@+id/namakampus"
            android:layout_marginBottom="190dp"
            android:layout_alignParentBottom="true"
            android:text="@string/nama_kampus"
            style="@style/LabelStyle"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/btn_login_splashscreen"
                style="@style/StrokeButtonStyl"
                android:minWidth="@dimen/splash_btn_width"
                android:text="@string/login_btn_label"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>