<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp">
        <TextView
            android:id="@+id/login_title"
            style="@style/LabelStyle"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="Smart Hidroponik Login"
            android:textSize="25dp"
            android:textColor="@color/hitam"/>
        <ImageView
            android:layout_marginTop="5dp"
            android:background="@drawable/splash_bg"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
        <EditText
            android:id="@+id/email_address"
            style="@style/EditTextStyle"
            android:layout_below="@+id/login_welcome_msg"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"
            android:layout_marginTop="100dp"
            android:layout_width="300dp"
            android:layout_height="50dp"/>
        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_below="@+id/email_address"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"/>
        <View
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:background="@color/orangmuda"
            android:layout_width="350dp"
            android:layout_height="5dp"/>
        <Button
            android:id="@+id/btn_login"
            style="@style/SolidButtonStyle"
            android:layout_below="@+id/forgot_password"
            android:layout_marginTop="@dimen/layout_in_between_margin"
            android:layout_width="match_parent"
            android:onClick="login"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/login_btn_label"
            tools:ignore="OnClick" />
        <TextView
            android:id="@+id/moto"
            android:text="@string/moto"
            android:gravity="center"
            android:layout_marginTop="@dimen/divider_start_and_end_margin"
            android:textColor="@color/dimGray"
            style="@style/LabelStyle"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:id="@+id/no_account"
            style="@style/LabelStyle"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="Buat Akun"
            android:textColor="@color/account"
            android:textSize="16sp"/>
    </LinearLayout>
</RelativeLayout>